2003-10-23  Padraig O'Briain <padraig.obriain@sun.com>

        * libgnomeui/libgnomeui.c (_add_atk_relation): Avoid leaking
        reference to AtkRelationSet.

Tue Oct 14 17:06:59 2003  Jonathan Blandford  <jrb@redhat.com>

	* libgnomeui/gnome-file-entry.h:
	* libgnomeui/gnome-icon-entry.h: undeprecate these two.  They
	don't have GTK+ equivelants yet.

Mon Oct 13 17:45:16 2003  Jonathan Blandford  <jrb@redhat.com>

	* libgnomeui/gnome-dateedit.h: undeprecate.

Mon Oct 13 17:32:40 2003  Jonathan Blandford  <jrb@redhat.com>

	* libgnomeui/gnome-window.h: deprecated
	* libgnomeui/gnome-color-picker.h: deprecated
	* libgnomeui/gnome-dateedit.h: deprecated
	* libgnomeui/gnome-dialog.h: deprecated
	* libgnomeui/gnome-entry.h: deprecated
	* libgnomeui/gnome-file-entry.h: deprecated
	* libgnomeui/gnome-font-picker.h: deprecated
	* libgnomeui/gnome-pixmap-entry.h: deprecated
	* libgnomeui/gnome-popup-menu.h: deprecated
	* libgnomeui/gnome-window.h: deprecated

2003-10-08  Mark McLoughlin  <markmc@sun.com>

	* libgnomeui/libgnomeui-access.[ch]: re-license to LGPL.
	It should never have been GPL ...

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-09-25  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>

	* libgnomeui/gnome-file-entry.c (browse_dialog_ok): Emit changed signal
	instead of activate signal. Bug #123203

2003-09-17  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c (gnome_icon_lookup):
	Handle vfs icons in mime info with absolute paths.

2003-09-15  Not Zed  <NotZed@Ximian.com>

	* libgnomeui/gnome-icon-list.c (real_select_icon): Only add the
	icon to the selection if it isn't already in the selected list.
	Fixes bug #122356.

2003-09-09  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0.1

2003-09-01  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0

2003-08-25  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.3.7
